plugins {
    id 'io.ratpack.ratpack-java' version '1.10.0-milestone-3'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'java'
}

apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
    maven {
        url 'https://nexus.sergeybochkov.com/repository/maven-public'
    }
}

dependencies {
    implementation('org.quartz-scheduler:quartz:2.3.2') {
        exclude module: 'slf4j-api'
    }
    implementation 'org.mongodb:mongodb-driver:3.12.10'
    // mail
    implementation ('com.jcabi:jcabi-email:1.12') {
        exclude module: 'slf4j-api'
    }
    implementation 'javax.activation:activation:1.1.1'
    implementation 'com.sun.mail:javax.mail:1.6.2'
    implementation 'javax.mail:mailapi:1.4.3'
    //
    implementation 'com.konghq:unirest-java:3.13.4'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation('org.thymeleaf:thymeleaf:3.0.14.RELEASE') {
        exclude module: 'slf4j-api'
    }
    implementation('resnyx:resnyx:4.6.3') {
        exclude module: 'slf4j-api'
        exclude module: 'logback-classic'
    }
    implementation 'org.slf4j:slf4j-api:1.7.33'
    implementation ('ch.qos.logback:logback-classic:1.2.10') {
        exclude module: 'slf4j-api'
    }

    testImplementation 'junit:junit:4.13.2'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

clean {
    doLast {
        file("${projectDir}/out").deleteDir()
        file("${projectDir}/logs").deleteDir()
    }
}

mainClassName = 'sb.tasks.Application'
